# data-analysis-exploratory-projects

./: CO2 Emissions Trend.pbix  README.md
CO2 Emission SQL/: mv.sql
Falcon 9 Data Science Capstone/: SpaceX_Machine Learning Prediction_Part_5.ipynb  edadataviz.ipynb  jupyter-labs-eda-sql-coursera_sqllite.ipynb  jupyter-labs-spacex-data-collection-api.ipynb  jupyter-labs-webscraping.ipynb  labs-jupyter-spacex-Data wrangling.ipynb
airbnb_price_pred/: Untitled.ipynb  pyproject.toml
airbnb_price_pred/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
airbnb_price_pred/.virtual_documents/: Untitled.ipynb
airbnb_price_pred/dataset/: airbnb_lisitng.csv  amsterdam_weekdays.csv  amsterdam_weekends.csv  athens_weekdays.csv  athens_weekends.csv  barcelona_weekdays.csv  barcelona_weekends.csv  berlin_weekdays.csv  berlin_weekends.csv  budapest_weekdays.csv  budapest_weekends.csv  lisbon_weekdays.csv  lisbon_weekends.csv  london_weekdays.csv  london_weekends.csv  paris_weekdays.csv  paris_weekends.csv  rome_weekdays.csv  rome_weekends.csv  vienna_weekdays.csv  vienna_weekends.csv
airbnb_price_pred/dataset/.ipynb_checkpoints/: airbnb_lisitng-checkpoint.csv
flight_price_pred/: Untitled.ipynb  pyproject.toml
flight_price_pred/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
flight_price_pred/.virtual_documents/: Untitled-Copy1.ipynb  Untitled-Copy2.ipynb  Untitled.ipynb
marathon_time_pred/: Untitled.ipynb  pyproject.toml
marathon_time_pred/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
marathon_time_predictions_analysis/: pyproject.toml
marathon_time_predictions_analysis/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  pyproject-checkpoint.toml
pet_adoption_analysis/: pet_adoption_analysis.ipynb  pyproject.toml
pet_adoption_analysis/.ipynb_checkpoints/: pet_adoption_analysis-checkpoint.ipynb  pyproject-checkpoint.toml
pet_adoption_analysis/.virtual_documents/: pet_adoption_analysis.ipynb
temp/: mv.sql
(+1 files in other folders)
