[tool.poetry]
name = "marathon-time-predictions-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1"
scikit-learn = "^1.5.1"
jupyter = "^1.0.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
